<resources>
    <string name="app_name">ViChro</string>
    <string name="machinevision">Machine Vision</string>
    <string name="samecolor">Find same colour</string>
    <string name="complementarycolor">Find complementary colour</string>
    <string name="colorlist">Colour list</string>
    <string name="savecolor">Save colour</string>
    <string name="date"></string>
    <string name="hackster">Hackster</string>
    <string name="infotext">ViChro is an Andoid App that helps people with limited colour perception in everyday life. Colours can be scanned and saved. Afterwards the user can load a colour and compare it with the currently scanned color, e.g. to find the same color or the complementary colour..</string>
    <string name="brunel">This represents the implementation of a workshop of Brunel University</string>
</resources>
