<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.example.ssf.mma.machinevision.MachineVision">


    <org.opencv.android.JavaCameraView
        android:id="@+id/jvc"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        opencv:camera_id="any"
        opencv:show_fps="true" />

    <Button
        android:id="@+id/saveColorButton"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/savecolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

    <Button
        android:id="@+id/colorListButton"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/colorlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="243dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <RadioButton
            android:id="@+id/sameColorRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/samecolor"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/complementaryColorRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complementarycolor"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="223dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveColorButton" />


</android.support.constraint.ConstraintLayout>
