<?xml version="1.0" encoding="utf-8"?>



<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.example.ssf.mma.userInterface.MainActivity"
    android:id="@+id/drawerLayout"

    >


    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="162dp"
            android:text="@string/machinevision"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="60dp"
            android:text="@string/hackster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="320dp"
            android:layout_height="226dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="46dp"
            android:text="@string/infotext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="170dp"
            android:layout_height="73dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="32dp"
            android:text="@string/brunel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>
